--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/icon": "2.1.1",
+    "@tailwindcss/vite": "^4.1.18",
+    "daisyui": "^5.5.14",
     "nuxt": "^4.2.2",
+    "tailwindcss": "^4.1.18",
     "vue": "^3.5.26",
     "vue-router": "^4.6.4"
+  },
+  "devDependencies": {
+    "@iconify-json/tabler": "^1.2.26"
   }
 }
