--- a/package.json
+++ b/package.json
@@ -4,22 +4,29 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "concurrently \"bun run dev:db\" \"nuxt dev\"",
+    "dev:db": "turso dev --db-file local.db",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@libsql/client": "^0.15.15",
     "@nuxt/icon": "2.1.1",
     "@nuxtjs/color-mode": "4.0.0",
     "@tailwindcss/vite": "^4.1.18",
+    "@types/node": "^25.0.3",
+    "concurrently": "^9.2.1",
     "daisyui": "^5.5.14",
+    "drizzle-orm": "^0.45.1",
     "nuxt": "^4.2.2",
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.26",
-    "vue-router": "^4.6.4"
+    "vue-router": "^4.6.4",
+    "zod": "^4.3.4"
   },
   "devDependencies": {
-    "@iconify-json/tabler": "^1.2.26"
+    "@iconify-json/tabler": "^1.2.26",
+    "drizzle-kit": "^0.31.8"
   }
 }
