--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/color-mode": "4.0.0",
     "@tailwindcss/vite": "^4.1.18",
     "@types/node": "^25.0.3",
+    "better-auth": "^1.4.10",
     "concurrently": "^9.2.1",
     "daisyui": "^5.5.14",
     "drizzle-orm": "^0.45.1",
