--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@libsql/client": "^0.15.15",
     "@nuxt/icon": "2.1.1",
     "@nuxtjs/color-mode": "4.0.0",
+    "@pinia/nuxt": "0.11.3",
     "@tailwindcss/vite": "^4.1.18",
     "@types/node": "^25.0.3",
     "better-auth": "^1.4.10",
@@ -21,6 +22,7 @@
     "daisyui": "^5.5.14",
     "drizzle-orm": "^0.45.1",
     "nuxt": "^4.2.2",
+    "pinia": "^3.0.4",
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.26",
     "vue-router": "^4.6.4",
